# stm32f4-freertos-template

./: Cargo.toml  README.MD  build.rs  memory.x  openocd.cfg  openocd.gdb  rust-toolchain.toml  stm32f4discovery.cfg
.cargo/: config.toml
include/: FreeRTOSConfig.h
src/: intrpt.rs  main.rs  uart_dma.rs  usb.rs
src/devices/: led.rs  mod.rs
